--- a/__JBF_Submission__/__main__.tex
+++ b/__JBF_Submission__/__main__.tex
@@ -153,8 +153,8 @@ Large Language Models, Business News, Stock Market Reaction, Market Efficiency
 %%%%%%%%%%%%% ROBUSTNESS CHECKS %%%%%%%%%%%%%%%%%%
 \input{txt_Robustness_Checks.tex}
 
-%%%%%%%%%%%%%% TRADING INTENSITY %%%%%%%%%%%%%%%%%%%%%
-\input{txt_Trading_Intensity.tex}
+%%%%%%%%%%%%%%% TRADING INTENSITY %%%%%%%%%%%%%%%%%%%%%
+%\input{txt_Trading_Intensity.tex}
 
 %%%%%%%%%%%%%%%%% CONCLUSION %%%%%%%%%%%%%%%%%%%%%%
 \input{txt_Conclusion.tex}
