--- a/__JBF_Submission__/tab_Portfolio_Statistics_Comparison_GROSS.tex
+++ b/__JBF_Submission__/tab_Portfolio_Statistics_Comparison_GROSS.tex
@@ -1,7 +1,9 @@
 \inserthere{tab:portfolio_statistics_gross_comparison}
 
 \begin{table}[H] 
-\caption{Portfolio Statistics Comparison: KMeans vs LLM Clustering | Gross Returns} 
+\caption{Portfolio Statistics Comparison: KMeans vs LLM Clustering
+% | Gross Returns
+} 
 \centering
 \label{tab:portfolio_statistics_gross_comparison}
 
