--- a/__JBF_Submission__/txt_Appendix.tex
+++ b/__JBF_Submission__/txt_Appendix.tex
@@ -42,3 +42,8 @@
 \input{txt_Benchmark_Comparison.tex}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+% 7) Trading Intensity
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\input{txt_Trading_Intensity.tex}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
