--- a/__JBF_Submission__/bib_references_DOI.bib
+++ b/__JBF_Submission__/bib_references_DOI.bib
@@ -264,3 +264,43 @@
 % url = {https://arxiv.org/abs/1706.03762},
 }
 
+
+@article{devlin2018bert,
+  title = {BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding},
+  author={Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
+  journal={arXiv preprint arXiv:1810.04805},
+  year={2018},
+  doi = {10.48550/ARXIV.1810.04805},
+  url = {https://arxiv.org/abs/1810.04805},
+  copyright = {arXiv.org perpetual,  non-exclusive license},
+  publisher = {arXiv},
+}
+
+@article{radford2018improving,
+  title={Improving language understanding by generative pre-training},
+  author={Radford, Alec and Narasimhan, Karthik and Salimans, Tim and Sutskever, Ilya and others},
+  year={2018},
+  publisher={OpenAI}
+}
+
+@article{le2023bloom,
+  title={Bloom: A 176b-parameter open-access multilingual language model},
+  author={Le Scao, Teven and Fan, Angela and Akiki, Christopher and Pavlick, Ellie and Ili, Suzana and Hesslow, Daniel and Castagn, Roman and Luccioni, Alexandra Sasha and Yvon, Franois and Gall, Matthias and others},
+  year={2023},
+  doi = {10.48550/ARXIV.2211.05100},
+  url = {https://arxiv.org/abs/2211.05100},
+  publisher = {arXiv},
+  copyright = {Creative Commons Attribution 4.0 International},
+  title = {BLOOM: A 176B-Parameter Open-Access Multilingual Language Model},
+}
+
+@article{touvron2023llama,
+  title = {LLaMA: Open and Efficient Foundation Language Models},
+  author={Touvron, Hugo and Lavril, Thibaut and Izacard, Gautier and Martinet, Xavier and Lachaux, Marie-Anne and Lacroix, Timothée and Roziére, Baptiste and Goyal, Naman and Hambro, Eric and Azhar, Faisal and others},
+  journal={arXiv preprint arXiv:2302.13971},
+  publisher = {arXiv},
+  year = {2023},
+  copyright = {Creative Commons Attribution 4.0 International}
+  doi = {10.48550/ARXIV.2302.13971},
+  url = {https://arxiv.org/abs/2302.13971},
+}
