--- a/__JBF_Submission__/txt_Model_LLM.tex
+++ b/__JBF_Submission__/txt_Model_LLM.tex
@@ -1,12 +1,12 @@
 \subsection{LLM-based approach: \qquote{What if an LLM reads the news?}}
 
-\hspace{0.5cm}One may wonder whether empowering an LLM to parse news articles according to a predefined schema that guides it in ellucidating news-implied firm-specific shocks can deliver better insights on how markets react to new information. In this section we will briefly introduce what Large Language Models are, how they have evolved and then, we will dive into how we can guide them to produce an economically structured analysis of business news. 
+One may wonder whether empowering an LLM to parse news articles according to a predefined schema that guides it in ellucidating news-implied firm-specific shocks can deliver better insights on how markets react to new information. In this section we will briefly introduce what Large Language Models are, how they have evolved and then, we will dive into how we can guide them to produce an economically structured analysis of business news. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection{Large Language Models}
 
-\hspace{0.5cm}In natural language processing (NLP), Large Language Models (LLMs) are designed to \qquote{understand} and generate human-like text. These models utilize the transformer architecture, which excels in modeling complex language tasks by capturing long-range dependencies and contextual relationships.
+In natural language processing (NLP), Large Language Models (LLMs) are designed to \qquote{understand} and generate human-like text. These models utilize the transformer architecture, which excels in modeling complex language tasks by capturing long-range dependencies and contextual relationships.
 
 \mx 
 At the heart of LLMs lies the concept of tokens, which serve as the elemental units of text. Tokens can be individual words, subword units, or characters. Let $x_{1:n}:=\3{x_1, x_2, \ldots, x_n}$ represent a sequence of tokens. The goal of an LLM is to estimate the probability distribution of the next token $x_{n+1}$ conditioned on the previous tokens $x_{1:n}$
@@ -30,17 +30,27 @@ $$
 
 
 \subsubsection{Evolution of LLMs}
-\hspace{0.5cm} The transformer architecture, introduced in the seminal work ``\textit{Attention Is All You Need}'' \citep{vaswani2017attention}, revolutionized LLM development due to its superior handling of long-range dependencies and efficient parallelization of computations.  Subsequent advancements include the encoder-only \texttt{BERT} model \citep{devlin2018bert}, showcasing the power of pre-training on large datasets for fine-tuning on specific tasks. 
+The transformer architecture, introduced in the seminal work ``\textit{Attention Is All You Need}'' \citep{vaswani2017attention}, revolutionized LLM development due to its superior handling of long-range dependencies and efficient parallelization of computations.  Subsequent advancements include the encoder-only \texttt{BERT} model \citep{devlin2018bert}, showcasing the power of pre-training on large datasets for fine-tuning on specific tasks. 
 
 \mx 
 Conversely, OpenAI's \texttt{GPT} series (\citealp{radford2018improving}) demonstrated the potential of decoder-only models for generative tasks. In particular, the release of \texttt{GPT-3} marked a significant leap in LLM capabilities with its 175 billion parameters and remarkable few-shot learning abilities. This model highlighted the importance of prompt engineering, where carefully crafted prompts can guide model outputs without extensive fine-tuning.  
 
 \mx 
-The trend towards open-source models like \texttt{BLOOM} \citep{le2023bloom}, \texttt{Mixtral} and Meta's \texttt{LLaMA} series \citep{touvron2023llama} emphasizes accessibility and transparency in LLM development.  The latest models, including OpenAI's  \texttt{GPT-4o} and \texttt{GPT-o1}, Google's \texttt{Gemini} and \texttt{Mixtral} and \texttt{Gemma}, Anthropic's \texttt{Claude 3.5 Sonnet}, and Meta's \texttt{LLaMA-3}, \texttt{LLaMA-3.1} and  \texttt{LLaMA-3.2} continue to push boundaries with improved accuracy, multimodal capabilities, and larger context windows.
+The trend towards open-source models like \texttt{BLOOM} \citep{le2023bloom}, \texttt{Mixtral} and Meta's \texttt{LLaMA} series \citep{touvron2023llama} emphasizes accessibility and transparency in LLM development.  The latest models, including OpenAI's  \texttt{GPT-4o} and \texttt{GPT-o1}, Google's \texttt{Gemini} and \texttt{Mixtral} and \texttt{Gemma}, Anthropic's \texttt{Claude 3.5 Sonnet}, and Meta's \texttt{LLaMA-3} series
+% \texttt{LLaMA-3}, \texttt{LLaMA-3.1} and  \texttt{LLaMA-3.2} 
+continue to push boundaries with improved accuracy, multimodal capabilities, and larger context windows.
 
 \subsubsection{Function Calling with LlaMA-3}
 
-\hspace{0.5cm} In our endeavor we will employ \texttt{LlaMA-3}, developed by Meta AI and released on April 18, 2024. This model has been pre-trained on approximately 15 trillion tokens of text gathered from ``publicly available sources'' and it comes in two sizes: 8 billion and 70 billion parameters. In this application, we will employ the 70B version, which we will access through an API via \texttt{GroqCloud}.
+In our endeavor we will employ \texttt{LlaMA-3}, developed by Meta AI and released on April 18, 2024 %
+%
+\footnote{
+\href{https://ai.meta.com/blog/meta-llama-3/}
+{\qquote{Introducing Meta Llama 3: The most capable openly available LLM to date}
+[April 18, 2024]}
+}
+%
+. This model has been pre-trained on approximately 15 trillion tokens of text gathered from ``publicly available sources'' and it comes in two sizes: 8 billion and 70 billion parameters. In this application, we will employ the 70B version, which we will access through an API via \texttt{GroqCloud}.
 
 \mx 
 Moreover, we will employ a \textit{function calling} approach to streamline the process of interacting with the LLM. This implies prespecifying a set of functions to the LLM that will then be passed through our dataset of news articles to obtain a structured output in \texttt{JSON} format. The formal procedure is thoroughly described in the Appendix (\cref{alg:function_calling}).
@@ -80,14 +90,27 @@ The function calling schema is outlined in \cref{tab:function_calling_structure}
 Note that the firms identified by the LLM are used to validate the firms identified by the pattern recognition algorithm (those extracted with \texttt{regex} by exploiting the pattern \texttt{<WORD>.MC}). As mentioned earlier, given the high quality of the filtered dataset (the ticker of the firms that are actively involved in the article are explicitly stated), they are almost identical. Hence, we indistinctively use $\F_i$ to simplify notation.
 
 \mx 
-The output provided by the LLM comprises two parts: a \qquote{Structured output}, and an \qquote{Unstructured output} justifying the choices made in the \qquote{Structured output}. The unstructured part is employed to validate the LLM's output. 
- By manually reading a small random subsample of such unstructured outputs from the LLM, we can quickly determine whether the LLM has correctly understood the task. If the LLM exhibits confusion, hallucination patterns become apparent in the unstructured output, indicating the need to refine the system instructions and tool descriptions within the function-calling schema to clarify the task for the LLM.
+%The output provided by the LLM comprises two parts: a \qquote{Structured output}, and an \qquote{Unstructured output} justifying the choices made in the \qquote{Structured output}. The unstructured part is employed to validate the LLM's output. 
+% By manually reading a small random subsample of such unstructured outputs from the LLM, we can quickly determine whether the LLM has correctly understood the task. If the LLM exhibits confusion, hallucination patterns become apparent in the unstructured output, indicating the need to refine the system instructions and tool descriptions within the function-calling schema to clarify the task for the LLM.
+
+
+% << OPTION 1 >>
+%The LLM generates both a structured output and accompanying explanations that detail its reasoning process. These explanations serve as a validation mechanism for the structured output.
+%By reviewing a random sample of these explanations, we can assess whether the LLM has grasped the task correctly. When the LLM misinterprets instructions, its explanations reveal patterns of confusion or hallucination, signaling that we need to refine the system prompts and function descriptions to provide better guidance. The prompt refinement continues iteratively until the LLM reliably produces correct outputs across different test cases.
+
+% << OPTION 2 >>
+The LLM provides two outputs: structured data (\qquote{Structured Output}) and a explanatory text describing its reasoning (\qquote{Unstructured Ouptut}). The explanations help us verify if the model correctly understands how to use the function-calling schema and follow system instructions. 
+To assess the LLM's understanding, we review a random sample of these explanations and look for patterns of misinterpretation, confusion, or hallucination. If we identify such issues, we refine the system prompts and function descriptions to provide clearer guidance. This iterative prompt refinement continues until the LLM reliably generates correct outputs across multiple test scenarios. 
+%To check this, we examine a sample of explanations and see if the LLM correctly uses the schema's parameters and constraints. If we spot any misunderstandings, we improve the prompts and function descriptions. We repeat this process until the LLM reliably produces correct outputs across different test cases.
+
+%The LLM generates both a structured output and accompanying explanations that detail its reasoning process. These explanations serve as a critical validation mechanism, allowing us to verify whether the model correctly interprets the function-calling schema, adheres to the specified parameters and constraints, and follows the system instructions as intended. To assess the LLM's understanding, we review a random sample of these explanations and look for patterns of misinterpretation, confusion, or hallucination. If we identify such issues, we refine the system prompts and function descriptions to provide clearer guidance. This iterative prompt refinement continues until the LLM reliably generates correct outputs across multiple test scenarios
 
 \begin{quote}
 
 \textbf{1) Structured Output: } 
 
 \vspace{0.2cm}
+{\centering
 	\begin{tabular}{ccccc}
 		\hline \Xhline{2\arrayrulewidth}
 		\texttt{firm} & \texttt{ticker} & \texttt{shock\_type} & \texttt{shock\_magnitude} & \texttt{shock\_direction}
@@ -98,6 +121,7 @@ The output provided by the LLM comprises two parts: a \qquote{Structured output}
 		\\ 
 		\hline \Xhline{2\arrayrulewidth}
 	\end{tabular}
+\par}
 \vspace{0.2cm}
 
 \textbf{2) Unstructured Output (justification)}
@@ -107,7 +131,8 @@ The output provided by the LLM comprises two parts: a \qquote{Structured output}
 \end{quote}
 
 This procedure is run iteratively from beginning (defining system prompt) to end (getting the output) for every $i\in\D$.\footnote{
-This procedure was run on a MacBook Pro M2 with 16GB RAM, 12-core central processing units (CPU), 19-core graphics processing units (GPU), and 16-core Neural Engine. The first run of the code takes about 18.4 hours; however, successive runs were required afterwards with smaller subsets of failed articles, as the LLM always raises errors for a certain percentage of the articles that are fed to it.
+This procedure was run on a MacBook Pro M2 with 16GB RAM, 12-core central processing units (CPU), 19-core graphics processing units (GPU), and 16-core Neural Engine. 
+%The first run of the code takes about 18.4 hours; however, successive runs were required afterwards with smaller subsets of failed articles, as the LLM always raises errors for a certain percentage of the articles that are fed to it.
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -152,7 +177,8 @@ In \cref{fig:LLM_cluster_distribution} we plot the distribution of news articles
 \mx 
 On the other hand, other clusters such as 16 (\textit{policy, minor, positive}) and 0 (\textit{demand, minor, positive}) also concentrate a big share of news. Note that no cluster has been assigned to cluster 13 (\textit{technology, minor, negative}).
 %
-Different from KMeans clustering with embeddings, now the distribution profile of articles through clusters becomes very stable across data splits. This shows that clustering based on a comprehensive analysis of the shocks implied by the article on the affected firms is really stable over time, which constitutes a promising result.
+%Different from KMeans clustering with embeddings, now the distribution profile of articles through clusters becomes very stable across data splits. This evidences that clustering based on a comprehensive analysis of the shocks implied by the article on the affected firms is really stable over time, which constitutes a promising result.
+Compared to KMeans clustering with embeddings, the distribution of articles across these refined clusters is now remarkably stable across different data splits. This consistency indicates that clustering based on a thorough analysis of the shocks implied by each article for the affected firms yields a robust, time-invariant categorization. This is an encouraging finding for subsequent research and applications.
 
 %----------------------------------------------------
 %----------------------------------------------------
